Correction of projects' urls

--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
                   </li>
                   <li>
                     <p>May 2020</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/SchoolWebsiteLazorik" rel="external">Alcohol market website</a></strong> [HTML5, CSS3, JS, MySQL, PHP, sever run by XAMPP (Apache, MySQL)]</p>
+                    <p><strong><a href="https://6mahdapihka9.github.io/SchoolWebsiteLazorik/main.html" rel="external">Alcohol market website</a></strong> [HTML5, CSS3, JS, MySQL, PHP, sever run by XAMPP (Apache, MySQL)]</p>
                   </li>
                   <li>
                     <p>April 2020</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/FEI_test" rel="external">Webpage made as a test for Internship</a></strong>, which shows jokes from JSON Chuck Norris API and can save them in favorites [HTML, CSS, JS, Ajax, JSON]</p>
+                    <p><strong><a href="https://6mahdapihka9.github.io/FEI_test/main.html" rel="external">Webpage made as a test for Internship</a></strong>, which shows jokes from JSON Chuck Norris API and can save them in favorites [HTML, CSS, JS, Ajax, JSON]</p>
                   </li>
                   <li>
                     <p>March 2020</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/CoverageTask" rel="external">Term paper project that calculates and builds optimal circles by given coordinates</a></strong> [HTML, CSS, JS]</p>
+                    <p><strong><a href="https://6mahdapihka9.github.io/Coverage_Task_v2/" rel="external">Term paper project that calculates and builds optimal circles by given coordinates</a></strong> [HTML, CSS, JS]</p>
                   </li>
                   <li>
                     <p>December 2019</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/CoverageTask" rel="external">School AI projects that can be trained and can make decisions based on data given information</a></strong> [Java 8]</p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/AI-Beginning" rel="external">School AI projects that can be trained and can make decisions based on data given information</a></strong> [Java 8]</p>
                   </li>
                   <li>
                     <p>November 2019</em></p>
