recent projects updated

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
                 <ul class="timeline">
                   <!-- Events -->
 
-
+                  <li>
+                    <p>May 2021</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/diplom_project" rel="external">Diploma project | Young's problem in 3D</a></strong> [HTML5, CSS3, JS]</p>
+                  </li>
                   <li>
                     <p>November 2020</em></p>
                     <p><strong><a href="https://github.com/6mahdapihka9/InventorSoft-task5" rel="external">Front-End | Angular course</a></strong> [HTML5, CSS3, JS, TS, Angular, cloud hosting on firebase]</p>
