recent project added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
                 <h3>Projects</h3>
                 <ul class="timeline">
                   <!-- Events -->
-
+                  <li>
+                    <p>August 2021</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/Terrain-Heroes" rel="external">Game in development | Terrain-Heroes</a></strong> [HTML5, CSS3, Express.js, Node.js, JavaScript, Handlebars] (In progress)</p>
+                    <p>Hosted on <strong><a href="https://terrain-heroes.herokuapp.com/" rel="external">Heroku</a></strong></p>
+                  </li>
                   <li>
                     <p>May 2021</em></p>
                     <p><strong><a href="https://github.com/6mahdapihka9/diplom_project" rel="external">Diploma project | Young's problem in 3D</a></strong> [HTML5, CSS3, JS]</p>
