--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <ul class="timeline">
                   <!-- Events -->
                   <li>
-                    <p>August 2021</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/Terrain-Heroes" rel="external">Game in development | Terrain-Heroes</a></strong> [HTML5, CSS3, Express.js, Node.js, JavaScript, Handlebars] (In progress)</p>
+                    <p>August 2021 (In progress)</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/Terrain-Heroes" rel="external">Game in development | Terrain-Heroes</a></strong> [HTML5, CSS3, Express.js, Node.js, JS, Handlebars]</p>
                     <p>Hosted on <strong><a href="https://terrain-heroes.herokuapp.com/" rel="external">Heroku</a></strong></p>
                   </li>
                   <li>
