events and skills updated a bit

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p>&mdash; Hello! I’m a skilled frontend developer.
                       I am passionate about programming and the way technologies bring value to people.
                       That is why I’m studying programming at Yuriy Fedkovych Chernivtsi National University on specialty “computer science”.
-                      While studying I learned programming languages: <strong style="margin-left: 0.0625em;">Js, HTML, CSS, Java, SQL</strong>, Python, PHP, C#, C++.
+                      While studying I learned programming languages: <strong style="margin-left: 0.0625em;">JS, HTML, CSS, Java, SQL</strong>, Python, PHP, C#, C++.
                       I have applied technologies of them for developing my projects.
                       My current goal is to apply my theoretical knowledge for development real projects.
                     </p>
@@ -131,6 +131,10 @@
                   <!-- Events -->
 
                   <li>
+                    <p>June 2021</em></p>
+                    <p><strong>Graduated</strong> from the 4th year of the <strong><a href="http://www.chnu.edu.ua/index.php?page=ua" rel="external">university</a></strong> and received a <strong>bachelor's degree</strong> </p>
+                  </li>
+                  <li>
                     <p>February 2021</em></p>
                     <p><strong>Took</strong> participation in <strong><a href="http://isc.onaft.edu.ua/" rel="external">International Competition of Student Scientific Works</a></strong> </p>
                   </li>
@@ -187,7 +191,7 @@
                     <span class="language" lang="ua">&#x1f1fa;&#x1f1e6;<span>УКРАЇНСЬКА</span></span>
                     <span class="language" lang="ru">&#x1f1f7;&#x1f1fa;<span>РУССКИЙ</span></span>
                     <span class="language" lang="en">&#x1f1fa;&#x1f1f8;<span>ENGLISH</span></span>
-                    <span class="language" lang="de">&#127465;&#127466;<span>GERMANY</span></span>
+<!--                    <span class="language" lang="de">&#127465;&#127466;<span>GERMANY</span></span>-->
                   </p>
                 </section>
 
@@ -195,13 +199,13 @@
                 <section>
                   <h3>Skills</h3>
                   <p class="tags small">
-                    Good knowledge in JavaScript, Git SVC, Java Core, MySQL.
+                    Good knowledge in JavaScript, Git SVC, Express, Java Core, MySQL.
                   </p>
                   <p class="tags small">
-                    Good understanding of front-end technologies, such as HTML5, and CSS3.
+                    Good understanding of front-end and back-end technologies, such as HTML5, CSS3, Node.js, npm.
                   </p>
                   <p class="tags small">
-                    Have experience in: Python, PHP, C, C++, C#, TypeScript, Pascal, Assembler.
+                    Have experience in: Python, TypeScript, PHP, C, C++, C#, Pascal, Assembler.
                   </p>
                 </section>
 
