--- a/index.html
+++ b/index.html
@@ -187,11 +187,17 @@
                 <!-- Languages -->
                 <section>
                   <h3>Languages</h3>
+                  <h5>Primary</h5>
                   <p class="tags small">
+                    <span class="language" lang="en">&#x1f1fa;&#x1f1f8;<span>ENGLISH</span></span>
                     <span class="language" lang="ua">&#x1f1fa;&#x1f1e6;<span>УКРАЇНСЬКА</span></span>
                     <span class="language" lang="ru">&#x1f1f7;&#x1f1fa;<span>РУССКИЙ</span></span>
-                    <span class="language" lang="en">&#x1f1fa;&#x1f1f8;<span>ENGLISH</span></span>
-<!--                    <span class="language" lang="de">&#127465;&#127466;<span>GERMANY</span></span>-->
+                  </p>
+                  <h5>Secondary</h5>
+                  <p class="tags small">
+                    <span class="language" lang="de">&#127465;&#127466;<span>GERMANY</span></span>
+                    <span class="language" lang="it">&#127470;&#127481;<span>ITALIAN</span></span>
+                    <span class="language" lang="ro">&#127479;&#127476;<span>ROMANIAN</span></span>
                   </p>
                 </section>
 
