recent projects updated date's style fixed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <div class="sixteen wide column">
                     <!-- Name, job, contacts -->
                     <h1 class="name">Oleksandr Kulesh</h1>
-                    <div class="job">full stack developer</div>
+                    <div class="job">24 y/o full stack developer</div>
                     <ul class="contacts">
                       <li>
                         <a href="mailto:kulesh.oleksandr@gmail.com" rel="author" class="mail">
@@ -90,37 +90,42 @@
                 <ul class="timeline">
                   <!-- Events -->
                   <li>
-                    <p>August 2021 (In progress)</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/Terrain-Heroes" rel="external">Game in development | Terrain-Heroes</a></strong> [HTML5, CSS3, Express.js, Node.js, JS, Handlebars]</p>
-                    <p>Hosted on <strong><a href="https://terrain-heroes.herokuapp.com/" rel="external">Heroku</a></strong></p>
+                    <p><em>October 2021</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/MineSweeper" rel="external" target="_blank">MineSweeper</a></strong> [Angular, HTML5, CSS3, TS, JS, Firebase DB]</p>
+                    <p>Hosted on <strong><a href="https://6mahdapihka9.github.io/MineSweeper/" rel="external" target="_blank">GitHub pages</a></strong></p>
                   </li>
                   <li>
-                    <p>May 2021</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/diplom_project" rel="external">Diploma project | Young's problem in 3D</a></strong> [HTML5, CSS3, JS]</p>
+                    <p><em>August 2021 (In progress)</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/Terrain-Heroes" rel="external" target="_blank">Game in development | Terrain-Heroes</a></strong> [HTML5, CSS3, Express.js, Node.js, JS, Handlebars]</p>
+                    <p>Hosted on <strong><a href="https://terrain-heroes.herokuapp.com/" rel="external" target="_blank">Heroku</a></strong></p>
                   </li>
                   <li>
-                    <p>November 2020</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/InventorSoft-task5" rel="external">Front-End | Angular course</a></strong> [HTML5, CSS3, JS, TS, Angular, cloud hosting on firebase]</p>
+                    <p><em>May 2021</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/diplom_project" rel="external" target="_blank">Diploma project | Young's problem in 3D</a></strong> [HTML5, CSS3, JS]</p>
                   </li>
                   <li>
-                    <p>May 2020</em></p>
-                    <p><strong><a href="https://6mahdapihka9.github.io/SchoolWebsiteLazorik/main.html" rel="external">Alcohol market website</a></strong> [HTML5, CSS3, JS, MySQL, PHP, sever run by XAMPP (Apache, MySQL)]</p>
+                    <p><em>November 2020</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/InventorSoft-task5" rel="external" target="_blank">Front-End | Angular course</a></strong> [HTML5, CSS3, JS, TS, Angular, cloud hosting on firebase]</p>
                   </li>
                   <li>
-                    <p>April 2020</em></p>
-                    <p><strong><a href="https://6mahdapihka9.github.io/FEI_test/main.html" rel="external">Webpage made as a test for Internship</a></strong>, which shows jokes from JSON Chuck Norris API and can save them in favorites [HTML, CSS, JS, Ajax, JSON]</p>
+                    <p><em>May 2020</em></p>
+                    <p><strong><a href="https://6mahdapihka9.github.io/SchoolWebsiteLazorik/main.html" rel="external" target="_blank">Alcohol market website</a></strong> [HTML5, CSS3, JS, MySQL, PHP, sever run by XAMPP (Apache, MySQL)]</p>
                   </li>
                   <li>
-                    <p>March 2020</em></p>
-                    <p><strong><a href="https://6mahdapihka9.github.io/Coverage_Task_v2/" rel="external">Term paper project that calculates and builds optimal circles by given coordinates</a></strong> [HTML, CSS, JS]</p>
+                    <p><em>April 2020</em></p>
+                    <p><strong><a href="https://6mahdapihka9.github.io/FEI_test/main.html" rel="external" target="_blank">Webpage made as a test for Internship</a></strong>, which shows jokes from JSON Chuck Norris API and can save them in favorites [HTML, CSS, JS, Ajax, JSON]</p>
                   </li>
                   <li>
-                    <p>December 2019</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/AI-Beginning" rel="external">School AI projects that can be trained and can make decisions based on data given information</a></strong> [Java 8]</p>
+                    <p><em>March 2020</em></p>
+                    <p><strong><a href="https://6mahdapihka9.github.io/Coverage_Task_v2/" rel="external" target="_blank">Term paper project that calculates and builds optimal circles by given coordinates</a></strong> [HTML, CSS, JS]</p>
                   </li>
                   <li>
-                    <p>November 2019</em></p>
-                    <p><strong><a href="https://github.com/6mahdapihka9/System-modeling-some-labs-" rel="external">Project that simulates a system that processes requests in a dynamic queue</a></strong> [Java 8]</p>
+                    <p><em>December 2019</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/AI-Beginning" rel="external" target="_blank">School AI projects that can be trained and can make decisions based on data given information</a></strong> [Java 8]</p>
+                  </li>
+                  <li>
+                    <p><em>November 2019</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/System-modeling-some-labs-" rel="external" target="_blank">Project that simulates a system that processes requests in a dynamic queue</a></strong> [Java 8]</p>
                   </li>
 
                 </ul>
@@ -131,28 +136,28 @@
                   <!-- Events -->
 
                   <li>
-                    <p>June 2021</em></p>
-                    <p><strong>Graduated</strong> from the 4th year of the <strong><a href="http://www.chnu.edu.ua/index.php?page=ua" rel="external">university</a></strong> and received a <strong>bachelor's degree</strong> </p>
+                    <p><em>June 2021</em></p>
+                    <p><strong>Graduated</strong> from the 4th year of the <strong><a href="http://www.chnu.edu.ua/index.php?page=ua" rel="external" target="_blank">university</a></strong> and received a <strong>bachelor's degree</strong> </p>
                   </li>
                   <li>
-                    <p>February 2021</em></p>
-                    <p><strong>Took</strong> participation in <strong><a href="http://isc.onaft.edu.ua/" rel="external">International Competition of Student Scientific Works</a></strong> </p>
+                    <p><em>February 2021</em></p>
+                    <p><strong>Took</strong> participation in <strong><a href="http://isc.onaft.edu.ua/" rel="external" target="_blank">International Competition of Student Scientific Works</a></strong> </p>
                   </li>
                   <li>
-                    <p>November 2020</em></p>
+                    <p><em>November 2020</em></p>
                     <p><strong>Completed</strong> the course <strong>Front-End | Angular course by InventorSoft</strong> </p>
                   </li>
                   <li>
-                    <p>August 2020</em></p>
-                    <p><strong>Completed</strong> the course <strong><a href="https://courses.prometheus.org.ua:18090/downloads/b1f23a40897b4b21b630992587d57bd2/Certificate.pdf" rel="external">Basics of programming in Java</a></strong> </p>
+                    <p><em>August 2020</em></p>
+                    <p><strong>Completed</strong> the course <strong><a href="https://courses.prometheus.org.ua:18090/downloads/b1f23a40897b4b21b630992587d57bd2/Certificate.pdf" rel="external" target="_blank">Basics of programming in Java</a></strong> </p>
                   </li>
                   <li>
-                    <p>July 2020</em></p>
-                    <p><strong>Completed</strong> the course <strong><a href="https://courses.prometheus.org.ua:18090/downloads/76ed914a9fba4270b8e1d3fbeb687358/Certificate.pdf" rel="external">Basics of Web UI development</a></strong> </p>
+                    <p><em>July 2020</em></p>
+                    <p><strong>Completed</strong> the course <strong><a href="https://courses.prometheus.org.ua:18090/downloads/76ed914a9fba4270b8e1d3fbeb687358/Certificate.pdf" rel="external" target="_blank">Basics of Web UI development</a></strong> </p>
                   </li>
                   <li>
                     <p><em>1<sup>th</sup> February 2019</em></p>
-                    <p><strong>Resumed</strong> education in <strong><a href="http://www.chnu.edu.ua/index.php?page=ua" rel="external">Chernivtsi National University</a></strong></p>
+                    <p><strong>Resumed</strong> education in <strong><a href="http://www.chnu.edu.ua/index.php?page=ua" rel="external" target="_blank">Chernivtsi National University</a></strong></p>
                   </li>
                   <li>
                     <p><em>5<sup>th</sup> January 2019</em></p>
@@ -165,7 +170,7 @@
                   <!-- Events -->
                   <li>
                     <p><em>25<sup>th</sup> December 2017</em></p>
-                    <p><strong>Left</strong> <strong><a href="https://kpi.ua/" rel="external">National Technical University of Ukraine «Igor Sikorsky Kyiv Polytechnic Institute»</a></strong> </p>
+                    <p><strong>Left</strong> <strong><a href="https://kpi.ua/" rel="external" target="_blank">National Technical University of Ukraine «Igor Sikorsky Kyiv Polytechnic Institute»</a></strong> </p>
                   </li>
                   <li>
                     <p>From May 2015 till February 2016</em></p>
@@ -173,11 +178,15 @@
                   </li>
                   <li>
                     <p><em>1<sup>st</sup> September 2014</em></p>
-                    <p><strong>Went</strong> to <strong><a href="https://kpi.ua/" rel="external">National Technical University of Ukraine «Igor Sikorsky Kyiv Polytechnic Institute»</a></strong> </p>
+                    <p><strong>Went</strong> to <strong><a href="https://kpi.ua/" rel="external" target="_blank">National Technical University of Ukraine «Igor Sikorsky Kyiv Polytechnic Institute»</a></strong> </p>
                   </li>
                   <li>
                     <p><em>31<sup>st</sup> May 2014</em></p>
-                    <p><strong>Ended</strong> <strong><a href="http://school130.org.ua/" rel="external">Specialized school of I - III degrees with in-depth study of English and Italian languages №130 named after Dante Alighieri of Kyiv</a></strong></p>
+                    <p><strong>Ended</strong> <strong><a href="http://school130.org.ua/" rel="external" target="_blank">Specialized school of I - III degrees with in-depth study of English and Italian languages №130 named after Dante Alighieri of Kyiv</a></strong></p>
+                  </li>
+                  <li>
+                    <p><em>4<sup>th</sup> July 1997</em></p>
+                    <p><strong>Born</strong> in <strong>Kyiv</strong></p>
                   </li>
                   <!-- Events -->
                 </ul>
@@ -224,7 +233,7 @@
                 <!-- Articles -->
                 <section>
                   <h3>Articles</h3>
-                  <p><sup><em><strong><a href="https://drive.google.com/file/d/1FPUq7MFbV8jRTW-d0-RG2e6XCKIEVhJ-/view" rel="external">YOUNG'S PROBLEM AND ITS APPLICATION</a></strong></em> on p.119</sup></p>
+                  <p><sup><em><strong><a href="https://drive.google.com/file/d/1FPUq7MFbV8jRTW-d0-RG2e6XCKIEVhJ-/view" rel="external" target="_blank">YOUNG'S PROBLEM AND ITS APPLICATION</a></strong></em> on p.119</sup></p>
                 </section>
 
               </div>
