recent projects updated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
+                <div class="avatar-wrapper">
+<!--                  <object class="avatar" data="small%20deal%20with%20it.svg" role="img" aria-label="My profile picture"></object>-->
+<!--                  <img class="avatar" src="photo_2021-07-14_23-40-46.jpg" alt="avatar">-->
+                </div>
                 <!-- Avatar -->
               </div>
               <div class="thirteen wide column">
@@ -89,6 +93,11 @@
                 <h3>Projects</h3>
                 <ul class="timeline">
                   <!-- Events -->
+                  <li>
+                    <p><em>October 2021</em></p>
+                    <p>Hometask for Radency online React course - <strong><a href="https://github.com/6mahdapihka9/CourseOfReactAndNodeTask2" rel="external" target="_blank">Todo webapp</a></strong> [React.js, Redux, HTML5, CSS3, JS]</p>
+                    <p>Hosted on <strong><a href="https://6mahdapihka9.github.io/CourseOfReactAndNodeTask2/" rel="external" target="_blank">GitHub pages</a></strong></p>
+                  </li>
                   <li>
                     <p><em>October 2021</em></p>
                     <p><strong><a href="https://github.com/6mahdapihka9/MineSweeper" rel="external" target="_blank">MineSweeper</a></strong> [Angular, HTML5, CSS3, TS, JS, Firebase DB]</p>
