react projects updated

--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
                 <ul class="timeline">
                   <!-- Events -->
                   <li>
+                    <p><em>November 2021</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/stopwatch" rel="external" target="_blank">Stopwatch</a></strong> [React.js, HTML5, CSS3, JS]</p>
+                    <p>Hosted on <strong><a href="https://6mahdapihka9.github.io/stopwatch/" rel="external" target="_blank">GitHub pages</a></strong></p>
+                  </li>
+                  <li>
+                    <p><em>November 2021</em></p>
+                    <p>Hometask for Pecode - <strong><a href="https://github.com/6mahdapihka9/pecode" rel="external" target="_blank">Rick&Morty tech task</a></strong> [React.js, Redux, HTML5, CSS3, JS]</p>
+                    <p>Hosted on <strong><a href="https://6mahdapihka9.github.io/pecode/" rel="external" target="_blank">GitHub pages</a></strong></p>
+                  </li>
+                  <li>
                     <p><em>October 2021</em></p>
                     <p>Hometask for Radency online React course - <strong><a href="https://github.com/6mahdapihka9/CourseOfReactAndNodeTask2" rel="external" target="_blank">Todo webapp</a></strong> [React.js, Redux, HTML5, CSS3, JS]</p>
                     <p>Hosted on <strong><a href="https://6mahdapihka9.github.io/CourseOfReactAndNodeTask2/" rel="external" target="_blank">GitHub pages</a></strong></p>
