avatar icon update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Résumé</title>
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <main>
@@ -13,8 +14,9 @@
             <div class="row">
               <div class="three wide center aligned column">
                 <div class="avatar-wrapper">
-<!--                  <object class="avatar" data="small%20deal%20with%20it.svg" role="img" aria-label="My profile picture"></object>-->
-<!--                  <img class="avatar" src="photo_2021-07-14_23-40-46.jpg" alt="avatar">-->
+                  <div class="crop">
+                    <img src="small%20deal%20with%20it.svg" alt="self_avatar_icon" />
+                  </div>
                 </div>
                 <!-- Avatar -->
               </div>
