--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Résumé</title>
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <main>
@@ -23,7 +24,7 @@
                   <div class="sixteen wide column">
                     <!-- Name, job, contacts -->
                     <h1 class="name">Oleksandr Kulesh</h1>
-                    <div class="job">24 y/o full stack developer</div>
+                    <div class="job">25 y/o full stack developer</div>
                     <ul class="contacts">
                       <li>
                         <a href="mailto:kulesh.oleksandr@gmail.com" rel="author" class="mail">
@@ -40,7 +41,7 @@
                       <li>
                         <a href="https://discordapp.com/users/317026106119159819" rel="author" class="github">
                           <svg class="icon" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48"><path d="M40,12c0,0-4.585-3.588-10-4l-0.488,0.976C34.408,10.174,36.654,11.891,39,14c-4.045-2.065-8.039-4-15-4s-10.955,1.935-15,4c2.346-2.109,5.018-4.015,9.488-5.024L18,8c-5.681,0.537-10,4-10,4s-5.121,7.425-6,22c5.162,5.953,13,6,13,6l1.639-2.185C13.857,36.848,10.715,35.121,8,32c3.238,2.45,8.125,5,16,5s12.762-2.55,16-5c-2.715,3.121-5.857,4.848-8.639,5.815L33,40c0,0,7.838-0.047,13-6C45.121,19.425,40,12,40,12z M17.5,30c-1.933,0-3.5-1.791-3.5-4c0-2.209,1.567-4,3.5-4s3.5,1.791,3.5,4C21,28.209,19.433,30,17.5,30z M30.5,30c-1.933,0-3.5-1.791-3.5-4c0-2.209,1.567-4,3.5-4s3.5,1.791,3.5,4C34,28.209,32.433,30,30.5,30z"/></svg>
-                          <span>zul_jin_</span>
+                          <span>zul`jin#2042</span>
                         </a>
                       </li>
                       <li>
@@ -93,6 +94,15 @@
                 <h3>Projects</h3>
                 <ul class="timeline">
                   <!-- Events -->
+                  <li>
+                    <p><em>March-July 2022</em></p>
+                    <p><strong><a href="https://github.com/IT-Academy-Social-Projects-KRV/MapUA/" rel="external" target="_blank">[SoftServe IT Academy] MapUA, an interactive map of extraordinary places in Ukraine</a></strong>[MERN, Typescript, Redux thunk, AWS, Heroku]</p>
+                    <p>Deployed on <strong><a href="https://map-ua.herokuapp.com/" rel="external" target="_blank">Heroku</a></strong></p>
+                  </li>
+                  <li>
+                    <p><em>February 2022</em></p>
+                    <p><strong><a href="https://github.com/6mahdapihka9/Scandiweb-React-Junior-Developer-Test" rel="external" target="_blank">Scandiweb technical task – product website</a></strong>[React, Redux, Apollo Client, GraphQL, HTML5, CSS3, JS]</p>
+                  </li>
                   <li>
                     <p><em>November 2021</em></p>
                     <p><strong><a href="https://github.com/6mahdapihka9/stopwatch" rel="external" target="_blank">Stopwatch</a></strong> [React.js, HTML5, CSS3, JS]</p>
@@ -154,6 +164,11 @@
                 <ul class="timeline">
                   <!-- Events -->
 
+                  <li>
+                    <p><em>March – July 2022</em></p>
+                    <p><strong>Graduated</strong> from <strong><a href="https://career.softserveinc.com/uk-ua/certification/verification" rel="external" target="_blank">WebUI Developer [React, Node] SoftServe IT Academy</a></strong> </p>
+                    <p>(Series ZN № 8872/2022)</p>
+                  </li>
                   <li>
                     <p><em>June 2021</em></p>
                     <p><strong>Graduated</strong> from the 4th year of the <strong><a href="http://www.chnu.edu.ua/index.php?page=ua" rel="external" target="_blank">university</a></strong> and received a <strong>bachelor's degree</strong> </p>
@@ -217,9 +232,13 @@
                   <h3>Languages</h3>
                   <h5>Primary</h5>
                   <p class="tags small">
-                    <span class="language" lang="en">&#x1f1fa;&#x1f1f8;<span>ENGLISH</span></span>
-                    <span class="language" lang="ua">&#x1f1fa;&#x1f1e6;<span>УКРАЇНСЬКА</span></span>
-                    <span class="language" lang="ru">&#x1f1f7;&#x1f1fa;<span>РУССКИЙ</span></span>
+                    <span class="language" lang="en">&#x1f1fa;&#x1f1f8;<span>ENGLISH - Upper-intermediate</span></span><span>(TOEFL - 80/120 Aug 2022)</span>
+                  </p>
+                  <p class="tags small">
+                    <span class="language" lang="ua">&#x1f1fa;&#x1f1e6;<span>Ukrainian - Native</span></span>
+                  </p>
+                  <p class="tags small">
+                    <span class="language" lang="ru">&#x1f1f7;&#x1f1fa;<span>Russian - Native</span></span>
                   </p>
                   <h5>Secondary</h5>
                   <p class="tags small">
@@ -232,14 +251,30 @@
                 <!-- Skills -->
                 <section>
                   <h3>Skills</h3>
+                  <h5>Main stack</h5>
+                  <ul>
+                    <li>HTML5</li>
+                    <li>HTML5 (semantics, accessibility)</li>
+                    <li>CSS3, preprocessor SASS/SCSS</li>
+                    <li>JavaScript (ES6+), TypeScript</li>
+                    <li>React (Hooks, Router, Material UI)</li>
+                    <li>Redux (Thunk)</li>
+                    <li>Git (GitHub, GitLab)</li>
+                    <li>Npm</li>
+                    <li>Node.js (Express, REST API)</li>
+                    <li>Angular</li>
+                  </ul>
+                  <h5>Additional stack:</h5>
                   <p class="tags small">
-                    Good knowledge in JavaScript, Git SVC, Express, Java Core, MySQL.
+                    Figma, Jira, Postman, Photoshop, MongoDB.
                   </p>
+                  <h5>Have experience:</h5>
                   <p class="tags small">
-                    Good understanding of front-end and back-end technologies, such as HTML5, CSS3, Node.js, npm.
+                    Vue, Nestjs, Websocket, Webpack, MySQL, Firebase, Heroku.
                   </p>
+                  <h5>Also worked with:</h5>
                   <p class="tags small">
-                    Have experience in: Python, TypeScript, PHP, C, C++, C#, Pascal, Assembler.
+                    Python, Java, C++.
                   </p>
                 </section>
 
