fix for latest update

--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
                   <h3>Skills</h3>
                   <h5>Main stack</h5>
                   <ul>
-                    <li>HTML5</li>
                     <li>HTML5 (semantics, accessibility)</li>
                     <li>CSS3, preprocessor SASS/SCSS</li>
                     <li>JavaScript (ES6+), TypeScript</li>
                     <li>React (Hooks, Router, Material UI)</li>
                     <li>Redux (Thunk)</li>
+                    <li>Material UI</li>
                     <li>Git (GitHub, GitLab)</li>
                     <li>Npm</li>
                     <li>Node.js (Express, REST API)</li>
@@ -266,7 +266,7 @@
                   </ul>
                   <h5>Additional stack:</h5>
                   <p class="tags small">
-                    Figma, Jira, Postman, Photoshop, MongoDB.
+                    Figma, Jira, Postman, Photoshop, MongoDB, GraphQL.
                   </p>
                   <h5>Have experience:</h5>
                   <p class="tags small">
