--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
+    <link rel="icon" type="image/x-icon" href="./resume.ico">
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
     <link rel="stylesheet" href="./styles.css">
   </head>
